--- a/projects/devops/eks-cicd/package.json
+++ b/projects/devops/eks-cicd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cicd",
+  "name": "eks-cicd",
   "scripts": {
     "build": "npx projen build",
     "bundle": "npx projen bundle",
@@ -28,24 +28,26 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.46.0",
-    "esbuild": "^0.15.11",
+    "aws-cdk": "^2.44.0",
+    "esbuild": "^0.15.10",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
-    "jest": "^29.2.0",
+    "jest": "^29.1.2",
     "jest-junit": "^13",
     "json-schema": "^0.4.0",
-    "npm-check-updates": "^16",
-    "projen": "^0.63.23",
+    "npm-check-updates": "^15",
+    "projen": "^0.63.10",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.46.0",
+    "@types/randomstring": "^1.1.8",
+    "aws-cdk-lib": "^2.44.0",
     "constructs": "^10.0.5",
+    "randomstring": "^1.2.2",
     "yaml": "^2.1.3"
   },
   "license": "Apache-2.0",
