--- a/projects/devops/eks-cicd/src/lib/buildspec/buildspec-cd.yaml
+++ b/projects/devops/eks-cicd/src/lib/buildspec/buildspec-cd.yaml
@@ -20,17 +20,27 @@ phases:
           curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.19.6/2021-01-05/bin/linux/amd64/kubectl
           chmod +x ./kubectl
           mv ./kubectl /usr/local/bin/kubectl
-          curl -o aws-iam-authenticator https://s3.us-west-2.amazonaws.com/amazon-eks/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
-          chmod +x ./aws-iam-authenticator
-          mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
-          echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
-          aws-iam-authenticator help
           mkdir -p ~/.kube
-          aws eks --region ap-northeast-2 update-kubeconfig --name awstf-eks-dev
+          aws eks --region $AWS_DEFAUT_REGION update-kubeconfig --name $PROJECT_NAME-eks-$ENVIRONMENT
+
+          # install argocd cli
+          curl --silent --location -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/download/v2.4.7/argocd-linux-amd64
+          chmod +x /usr/local/bin/argocd
+
+          # login argo-server
+          #kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'
+          export ARGOCD_SERVER=`kubectl get svc argocd-server -n argocd -o json | jq --raw-output '.status.loadBalancer.ingress[0].hostname'`
+          export ARGO_PWD=`kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d`
+          argocd login $ARGOCD_SERVER --username admin --password $ARGO_PWD --insecure
         fi
   build:
     commands:
       - echo Skip Build on `date`
+      - |
+        if [ "$TARGET_TYPE" = "eks" ]; then 
+         
+
+        fi 
   post_build:
     commands:
       - echo Post Build started on `date`
@@ -46,18 +56,17 @@ phases:
         fi 
       - |
         if [ "$TARGET_TYPE" = "eks" ]; then 
-          # from S3 Bucket
-          aws s3 cp s3://$ARTIFACT_BUCKET/$SERVICE_NAME/$IMAGE_TAG.zip .
-          unzip $IMAGE_TAG.zip
-          ls -al ./k8s
-          sed -i "s#SERVICE_NAME#$SERVICE_NAME#g" ./k8s/deployment.yaml
-          sed -i "s#ENVIRONMENT#$ENVIRONMENT#g" ./k8s/deployment.yaml
-          sed -i "s#IMAGE_TAG#$IMAGE_TAG#g" ./k8s/deployment.yaml
-          sed -i "s#CONTAINER_PORT#$CONTAINER_PORT#g" ./k8s/deployment.yaml
-          sed -i "s#SERVICE_NAME#$SERVICE_NAME#g" ./k8s/service.yaml
-          sed -i "s#ENVIRONMENT#$ENVIRONMENT#g" ./k8s/service.yaml
-          cat ./k8s/deployment.yaml
-          kubectl apply -f ./k8s
+          CONTEXT_NAME=`kubectl config view -o jsonpath='{.current-context}'`
+          argocd cluster add $CONTEXT_NAME
+
+          kubectl create namespace $PROJECT_NAME-$ENVIRONMENT
+          argocd app create $SERVICE_NAME --repo $REPOSITORY_URI --path ./dist/$ENVIRONMENT --dest-server https://kubernetes.default.svc --dest-namespace $PROJECT_NAME-$ENVIRONMENT
+          argocd app get $SERVICE_NAME
+
+          #argocd app sync ecsdemo-nodejs
+          argocd app get $SERVICE_NAME
+          argocd app sync $SERVICE_NAME
+
         fi 
       - |
         if [ "$TARGET_TYPE" = "lambda" ]; then 
